Added added error checking to view template api

--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -26,4 +26,5 @@ html
            .col-xs-12
              small &copy; Vince Bloise 2016
     script(src='/javascripts/jquery-1.11.1.min.js')
+        script(src='/javascripts/validations.js')
     script(src='/bootstrap/js/bootstrap.min.js')
