--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(ng-app='loc8trApp')
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
@@ -25,6 +25,8 @@ html
          .row
            .col-xs-12
              small &copy; Vince Bloise 2016
+    script(src='/angular/angular.min.js')
+    script(src='/angular/loc8trApp.js')
     script(src='/javascripts/jquery-1.11.1.min.js')
-        script(src='/javascripts/validations.js')
+    script(src='/javascripts/validations.js')
     script(src='/bootstrap/js/bootstrap.min.js')
